--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
 						<div class="item">
 							<div class="serviceBox">
 								<div class="service-icon"><i class="fa fa-user-md" aria-hidden="true"></i></div>
-								<h3 class="title">Dermatology</h3>
+								<h3 class="title">Cosmetology</h3>
 								<p class="description">
-									Dermatologists at Yeseswnini Polyclinic provide personalized treatment for patients suffering from various skin diseases or disorders. We ensure to excel in providing the best.
+									Cosmetology at Yeseswnini Polyclinic provide personalized treatment for patients suffering from various skin diseases or disorders. We ensure to excel in providing the best.
 								</p>
 								<!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
 							</div>
