adding changes for website

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="row">
 				<div class="col-lg-6">
 					<div class="left-top">
-						<a class="new-btn-d br-2" href="https://www.lybrate.com/consult-privately/doctor/dr-shivasagari-parsa-diabetologist?fbclid=IwAR0d94a_bpzcIWpJwXriUgzKbdbvuY0nSVq_mnGyaNfQuu_0F3tBKEepy2E"><span>Book Appointment</span></a>
+						<a class="new-btn-d br-2" href="https://www.eka.care/doctor/shiva-sagari"><span>Book Appointment</span></a>
 						<div class="mail-b"><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> dr.sagaripradeep@gmail.com</a></div>
 					</div>
 				</div>
@@ -307,8 +307,8 @@
 						<div class="item">
 							<div class="serviceBox">
 								<div class="service-icon"><i class="fa fa-calendar" aria-hidden="true"></i></div>
-								<h3 class="title">Book An Apointment with lybrate</h3>
-								<a href="https://www.lybrate.com/consult-privately/doctor/dr-shivasagari-parsa-diabetologist?fbclid=IwAR0d94a_bpzcIWpJwXriUgzKbdbvuY0nSVq_mnGyaNfQuu_0F3tBKEepy2E" class="new-btn-d br-2">Click Here</a>
+								<h3 class="title">Book An Apointment with Eka Care</h3>
+								<a href="https://www.eka.care/doctor/shiva-sagari" class="new-btn-d br-2">Click Here</a>
 							</div>
 						</div>
                         <!-- form end -->
