adding changes for website

--- a/index.html
+++ b/index.html
@@ -205,16 +205,6 @@
 						<div class="item">
 							<div class="serviceBox">
 								<div class="service-icon"><i class="fa fa-user-md" aria-hidden="true"></i></div>
-								<h3 class="title">Medical Camps</h3>
-								<p class="description">
-									Medical camps are conducted once in every two months as non commercial activity in serving the humanity. 
-								</p>
-								<!-- <a href="#" class="new-btn-d br-2">Read More</a>
-							</div>
-						</div> -->
-						<div class="item">
-							<div class="serviceBox">
-								<div class="service-icon"><i class="fa fa-user-md" aria-hidden="true"></i></div>
 								<h3 class="title">Diabetology</h3>
 								<p class="description">
 									Yeseswnini Polyclinic is committed to deliver a greater amount of routine diabetes care, including much of the day-to-day support for many people with diabetes prioritize quality care and efficiency
@@ -240,6 +230,16 @@
 								<!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
 							</div>
 						</div>
+						<div class="item">
+							<div class="serviceBox">
+								<div class="service-icon"><i class="fa fa-user-md" aria-hidden="true"></i></div>
+								<h3 class="title">Medical Camps</h3>
+								<p class="description">
+									Medical camps are conducted once in every two months as non commercial activity in serving the humanity. 
+								</p>
+								 <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
+							</div>
+						</div> 
 						<!--<div class="item">
 							<div class="serviceBox">
 								<div class="service-icon"><i class="fa fa-plus-square" aria-hidden="true"></i></div>
