--- a/blog.html
+++ b/blog.html
@@ -78,8 +78,27 @@
 	</div>
 	<!-- End top bar -->
 	
-	<!-- Start header -->
-	<!-- End header -->
+<!-- Start header -->
+<header class="top-header">
+	<nav class="navbar header-nav navbar-expand-lg">
+		<div class="container">
+			<a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="image"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false" aria-label="Toggle navigation">
+				<span></span>
+				<span></span>
+				<span></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-end" id="navbar-wd">
+				<ul class="navbar-nav">
+					<li><a class="nav-link active" href="index.html">Home</a></li>
+					<li><a class="nav-link" href="blog.html">Blog</a></li>
+					<li><a class="nav-link" href="#contact">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+</header>
+<!-- End header -->
 	
 	<!-- Start Banner -->
 	<div class="ulockd-home-slider">
