--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				</button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbar-wd">
                     <ul class="navbar-nav">
-                        <li><a class="nav-link active" href="#home">Home</a></li>
+                        <li><a class="nav-link active" href="index.html">Home</a></li>
                         <li><a class="nav-link" href="#about">About Us</a></li>
                         <li><a class="nav-link" href="#services">Services</a></li>
 						<li><a class="nav-link" href="#appointment">Appointment</a></li>
