--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 col-sm-6">
+				<!-- <div class="col-md-3 col-sm-6">
 					<div class="box-gallery">
 						<img src="images/9.jpg" alt="">
 						<div class="box-content">		
@@ -504,7 +504,7 @@
 							</ul>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-md-3 col-sm-6">
 					<div class="box-gallery">
 						<img src="images/10.jpg" alt="">
