--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 						<h1>Memberships</h1>
 						Life member in IMA
 						<h1>Languages</h1>
-						English, Telugu
+						English, Telugu, Hindi
 					</div>
 				</div>
 			</div>
